Cluster index endpoint w/o POST
